--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,7 +19,7 @@ jobs:
         go-version: '1.19'
 
     - name: Decompress test data
-      run: zstd -d opcodes.bin.zstd
+      run: zstd -d opcodes.bin.zst
 
     - name: Build
       run: go build -v ./...
